small fix for button on mobile (#95)

--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "utils/utils";
 @import '~swiper/css/swiper.min.css';
 
 .home-page {
@@ -23,6 +24,12 @@
     font-size: 2.6rem;
     color: $dark-text-color;
     margin-bottom: 1rem;
+  }
+
+  &_button {
+    @include if-smaller-than(xs) {
+      text-align: center;
+    }
   }
 }
 
